# prometheus-discord-alert

./: Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs
