[package]
name = "prometheus-discord-alert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["attributes"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
rouille = "3.5.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_repr = "0.1.8"
